# mirrorctl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
data/: test_baseurls.txt
scripts/: pin-dnf-mirror-country  pin-dnf-mirrors  print-dnf-repo.py  use-main-repo-only
src/mirrorctl/: cli.py  operations.py  types.py  utils.py  validation.py
src/mirrorctl/data/: fedora.py  rpmfusion_free.py  rpmfusion_nonfree.py
tests/: conftest.py  test_cli.py  test_operations.py  test_utils.py  test_validation.py
