[project]
name = "mirrorctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "distro>=1.9.0",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "rich>=14.2.0",
    "pre-commit>=4.5.1",
    "pyrefly>=0.47.0",
    "ruff>=0.14.11",
    "commitizen>=4.11.6",
]

[project.scripts]
mirrorctl = "mirrorctl.cli:app"

[tool.uv]
package = true

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
